--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="flex items-center justify-center min-h-screen bg-gray-100">
-    <section class="w-full max-w-md mx-auto mt-10 p-6 rounded-lg shadow-lg bg-blue-500 text-white">
+    <section class="md:w-full w-[92%] max-w-md mx-auto mt-10 px-6 py-12 rounded-lg shadow-lg bg-blue-500 text-white">
         <h1 class="text-2xl font-bold text-center">BMI Calculator</h1>
         <div class="mt-6 flex flex-col gap-4">
             <input id="w" class="bg-white text-gray-700 px-4 py-2 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-300" 
